--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				<header id="header">
 					<div class="logo container">
 						<div>
-							<h1><a href="index.html" id="logo">TXT</a></h1>
-							<p>A responsive site template by HTML5 UP</p>
+							<h1><a href="index.html" id="logo"></a></h1>
+							<p>This site is still under construction!</p>
 						</div>
 					</div>
 				</header>
